update layout and pictures

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <h2>Portfolio</h2>
         <div class="photos">
           <div class="columnone">
-            <img src="./images/pics/0001.jpg" class="photo" />
+            <img src="./images/pics/0001.png" class="photo" />
             <img src="./images/pics/0002.jpg" class="photo" />
             <img src="./images/pics/0003.jpg" class="photo" />
             <img src="./images/pics/0004.jpg" class="photo" />
@@ -58,8 +58,8 @@
             <img src="./images/pics/0016.jpg" class="photo" />
             <img src="./images/pics/0017.jpg" class="photo" />
             <img src="./images/pics/0018.jpg" class="photo" />
-            <img src="./images/pics/0019.jpg" class="photo" />
-            <img src="./images/pics/0020.jpg" class="photo" />
+            <img src="./images/pics/0019.png" class="photo" />
+            <img src="./images/pics/0020.png" class="photo" />
             <img src="./images/pics/0021.jpg" class="photo" />
           </div>
           <div class="columntwo">
@@ -69,12 +69,12 @@
             <img src="./images/pics/0025.jpg" class="photo" />
             <img src="./images/pics/0026.jpg" class="photo" />
             <img src="./images/pics/0027.jpg" class="photo" />
-            <img src="./images/pics/0028.jpg" class="photo" />
+            <img src="./images/pics/0028.png" class="photo" />
             <img src="./images/pics/0029.jpg" class="photo" />
             <img src="./images/pics/0030.jpg" class="photo" />
             <img src="./images/pics/0031.jpg" class="photo" />
             <img src="./images/pics/0032.jpg" class="photo" />
-            <img src="./images/pics/0033.jpg" class="photo" />
+            <img src="./images/pics/0033.png" class="photo" />
             <img src="./images/pics/0034.jpg" class="photo" />
             <img src="./images/pics/0035.jpg" class="photo" />
             <img src="./images/pics/0036.jpg" class="photo" />
@@ -85,7 +85,7 @@
             <img src="./images/pics/0099.jpg" class="photo" />
           </div>
           <div class="columnthree">
-            <img src="./images/pics/0041.jpg" class="photo" />
+            <img src="./images/pics/0041.png" class="photo" />
             <img src="./images/pics/0042.jpg" class="photo" />
             <img src="./images/pics/0043.jpg" class="photo" />
             <img src="./images/pics/0044.jpg" class="photo" />
