menu spacing issue

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
       <div class="menu">
         <a href="#a">Home</a>
-        <a href="#b">About</a>
+        <a href="#b">About me</a>
         <a href="#c">Portfolio</a>
         <a href="#d">Contact</a>
       </div>
