thumbnail added home button repaired

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:image" content="https://www.szaboreka.ro/images/hatter.png" />
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./styles.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
@@ -16,7 +17,7 @@
         <a href="./magyar.html" class="flag">HU</a>
       </div>
 
-      <div class="background_logo" id="a">
+      <div class="background_logo" id="l">
         <img src="./images/background.png" alt="logo" class="logo" />
       </div>
       <div class="menu">
@@ -26,12 +27,12 @@
         <a href="#d">Contact</a>
       </div>
       <div class="social-media">
-        <a href="https://www.facebook.com/PhotoPhactoryBySzaboReka/" target="_blank"><i style="font-size: 24px;" class="fa">&#xf082;</i></a>
-        <a href="https://www.instagram.com/szaborekaphotophactory/" target="_blank"><i style="font-size: 24px;" class="fa">&#xf16d;</i></a>
+        <a href="https://www.facebook.com/PhotoPhactoryBySzaboReka/" target="_blank"><i style="font-size: 24px" class="fa">&#xf082;</i></a>
+        <a href="https://www.instagram.com/szaborekaphotophactory/" target="_blank"><i style="font-size: 24px" class="fa">&#xf16d;</i></a>
       </div>
     </nav>
     <main>
-      <div class="background">
+      <div class="background" id="a">
         <img src="./images/hatter.png" alt="logo" class="logo2" />
       </div>
 
@@ -113,16 +114,12 @@
           <h2>Dear Visitor!</h2>
           <p>Thank you for visiting my website!</p>
           <p>
-            I'm Réka Szabó, 27 years old. My main occupation is design engineer, photography is my true love. 😊 I found my passion in this area where
+            I'm Réka Szabó, 28 years old. My main occupation is design engineer, photography is my true love. 😊 I found my passion in this area where
             I can really use my creativity. I like pictures that convey feelings and emotions. I work mostly as a portrait photographer, but I take on
             anything that is challenging.
           </p>
-          <p>
-            If you like my photos and want us to work together, you can find the contact information here on the site.
-          </p>
-          <p>
-            P.s. : Remember, every photograph keeps an eternal memory for a lifetime!
-          </p>
+          <p>If you like my photos and want us to work together, you can find the contact information here on the site.</p>
+          <p>P.s. : Remember, every photograph keeps an eternal memory for a lifetime!</p>
         </article>
         <div>
           <img class="aboutme" src="./images/aboutme.jpg" alt="Portrait of Szabó Réka" />
