--- a/magyar.html
+++ b/magyar.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:image" content="https://www.szaboreka.ro/images/hatter.png" />
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./styles.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
@@ -16,7 +17,7 @@
         <a href="./magyar.html" class="flag">HU</a>
       </div>
 
-      <div class="background_logo" id="a">
+      <div class="background_logo" id="l">
         <img src="./images/background.png" alt="logo" class="logo" />
       </div>
       <div class="menu">
@@ -26,12 +27,12 @@
         <a href="#d">Kapcsolat</a>
       </div>
       <div class="social-media">
-        <a href="https://www.facebook.com/PhotoPhactoryBySzaboReka/" target="_blank"><i style="font-size: 24px;" class="fa">&#xf082;</i></a>
-        <a href="https://www.instagram.com/szaborekaphotophactory/" target="_blank"><i style="font-size: 24px;" class="fa">&#xf16d;</i></a>
+        <a href="https://www.facebook.com/PhotoPhactoryBySzaboReka/" target="_blank"><i style="font-size: 24px" class="fa">&#xf082;</i></a>
+        <a href="https://www.instagram.com/szaborekaphotophactory/" target="_blank"><i style="font-size: 24px" class="fa">&#xf16d;</i></a>
       </div>
     </nav>
     <main>
-      <div class="background">
+      <div class="background" id="a">
         <img src="./images/hatter.png" alt="logo" class="logo2" />
       </div>
 
@@ -113,16 +114,12 @@
           <h2>Kedves látogató!</h2>
           <p>Köszönöm, hogy benéztél a honlapomra!</p>
           <p>
-            Szabó Réka vagyok, 27 éves. Fő foglalkozásom tervező mérnök, a fényképezés az igaz szerelmem. 😊 Ezen a területen találtam meg a
+            Szabó Réka vagyok, 28 éves. Fő foglalkozásom tervező mérnök, a fényképezés az igaz szerelmem. 😊 Ezen a területen találtam meg a
             szenvedélyt, ahol a kreativitásom igazán kitudom használni. Szeretem, ha élnek a képek, ha van bennük érzelem. Főként portré fotósként
             dolgozom, ugyanakkor örömmel fogadom az új kihívásokat, helyzeteket.
           </p>
-          <p>
-            Ha tetszenek a fotóim és szeretnéd, hogy közösen dolgozzunk, elérhetőségem az oldalon megtalálod.
-          </p>
-          <p>
-            U. I: ne feledd, minden fénykép egy örök emléket őriz egy életen át!
-          </p>
+          <p>Ha tetszenek a fotóim és szeretnéd, hogy közösen dolgozzunk, elérhetőségem az oldalon megtalálod.</p>
+          <p>U. I: ne feledd, minden fénykép egy örök emléket őriz egy életen át!</p>
         </article>
         <div>
           <img class="aboutme" src="./images/aboutme.jpg" alt="Portrait of Szabó Réka" />
