--- a/roman.html
+++ b/roman.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:image" content="https://www.szaboreka.ro/images/hatter.png" />
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./styles.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
@@ -16,7 +17,7 @@
         <a href="./magyar.html" class="flag">HU</a>
       </div>
 
-      <div class="background_logo" id="a">
+      <div class="background_logo" id="l">
         <img src="./images/background.png" alt="logo" class="logo" />
       </div>
       <div class="menu">
@@ -26,12 +27,12 @@
         <a href="#d">Contact</a>
       </div>
       <div class="social-media">
-        <a href="https://www.facebook.com/PhotoPhactoryBySzaboReka/" target="_blank"><i style="font-size: 24px;" class="fa">&#xf082;</i></a>
-        <a href="https://www.instagram.com/szaborekaphotophactory/" target="_blank"><i style="font-size: 24px;" class="fa">&#xf16d;</i></a>
+        <a href="https://www.facebook.com/PhotoPhactoryBySzaboReka/" target="_blank"><i style="font-size: 24px" class="fa">&#xf082;</i></a>
+        <a href="https://www.instagram.com/szaborekaphotophactory/" target="_blank"><i style="font-size: 24px" class="fa">&#xf16d;</i></a>
       </div>
     </nav>
     <main>
-      <div class="background">
+      <div class="background" id="a">
         <img src="./images/hatter.png" alt="logo" class="logo2" />
       </div>
 
@@ -113,16 +114,12 @@
           <h2>Stimate vizitator!</h2>
           <p>Îți mulțumesc că mi-ai vizitat website-ul!</p>
           <p>
-            Mă numesc Réka Szabó, am 27 de ani. Principala mea ocupație este inginer de proiectare, fotografia este adevărata mea iubire. 😊 Mi-am
+            Mă numesc Réka Szabó, am 28 de ani. Principala mea ocupație este inginer de proiectare, fotografia este adevărata mea iubire. 😊 Mi-am
             găsit pasiunea în acest domeniu în care îmi pot folosi cu adevărat creativitatea. Îmi plac pozele care transmit sentimente și emoții.
             Lucrez mai ales ca fotograf de portret, dar accept orice alta provocare
           </p>
-          <p>
-            Dacă vă plac fotografiile mele și doriți ca noi să colaborăm, puteți găsi informațiile de contact aici pe site.
-          </p>
-          <p>
-            P.S. : Nu uitați, fiecare fotografie păstrează o amintire veșnică pentru o viață!
-          </p>
+          <p>Dacă vă plac fotografiile mele și doriți ca noi să colaborăm, puteți găsi informațiile de contact aici pe site.</p>
+          <p>P.S. : Nu uitați, fiecare fotografie păstrează o amintire veșnică pentru o viață!</p>
         </article>
         <div>
           <img class="aboutme" src="./images/aboutme.jpg" alt="Portrait of Szabó Réka" />
