--- a/roman.html
+++ b/roman.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:image" content="https://www.szaboreka.ro/images/hatter.png" />
+    <meta property="og:image" content="https://www.szaboreka.ro/images/hatter.JPG" />
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./styles.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
@@ -32,8 +32,9 @@
       </div>
     </nav>
     <main>
-      <div class="background" id="a">
-        <img src="./images/hatter.png" alt="logo" class="logo2" />
+      <br id="a" />
+      <div class="background">
+        <img src="./images/hatter.JPG" alt="logo" class="logo2" />
       </div>
 
       <div class="portfolio" id="c">
