--- a/magyar.html
+++ b/magyar.html
@@ -32,8 +32,9 @@
       </div>
     </nav>
     <main>
-      <div class="background" id="a">
-        <img src="./images/hatter.png" alt="logo" class="logo2" />
+      <br id="a" />
+      <div class="background">
+        <img src="./images/hatter.JPG" alt="logo" class="logo2" />
       </div>
 
       <div class="portfolio" id="c">
