--- a/magyar.html
+++ b/magyar.html
@@ -42,71 +42,41 @@
         <h2>Portfólió</h2>
         <div class="photos">
           <div class="columnone">
-            <img src="./images/pics/0001.png" class="photo" />
-            <img src="./images/pics/0002.jpg" class="photo" />
-            <img src="./images/pics/0003.jpg" class="photo" />
-            <img src="./images/pics/0004.jpg" class="photo" />
-            <img src="./images/pics/0005.jpg" class="photo" />
-            <img src="./images/pics/0006.jpg" class="photo" />
-            <img src="./images/pics/0007.jpg" class="photo" />
-            <img src="./images/pics/0008.jpg" class="photo" />
-            <img src="./images/pics/0009.jpg" class="photo" />
-            <img src="./images/pics/0010.jpg" class="photo" />
-            <img src="./images/pics/0011.jpg" class="photo" />
-            <img src="./images/pics/0012.jpg" class="photo" />
-            <img src="./images/pics/0013.jpg" class="photo" />
-            <img src="./images/pics/0014.jpg" class="photo" />
-            <img src="./images/pics/0015.jpg" class="photo" />
-            <img src="./images/pics/0016.jpg" class="photo" />
-            <img src="./images/pics/0017.jpg" class="photo" />
-            <img src="./images/pics/0018.jpg" class="photo" />
-            <img src="./images/pics/0019.png" class="photo" />
-            <img src="./images/pics/0020.png" class="photo" />
-            <img src="./images/pics/0021.jpg" class="photo" />
+            <img src="/images/halloween/0001.jpg" class="photo" />
+            <img src="/images/halloween/0002.jpg" class="photo" />
+            <img src="/images/halloween/0003.jpg" class="photo" />
+            <img src="/images/halloween/0004.jpg" class="photo" />
+            <img src="/images/halloween/0005.jpg" class="photo" />
+            <img src="/images/halloween/0006.jpg" class="photo" />
+            <img src="/images/halloween/0007.jpg" class="photo" />
+            <img src="/images/halloween/0008.jpg" class="photo" />
+            <img src="/images/halloween/0011.jpg" class="photo" />
+            <img src="/images/halloween/0029.jpg" class="photo" />
           </div>
           <div class="columntwo">
-            <img src="./images/pics/0022.jpg" class="photo" />
-            <img src="./images/pics/0023.jpg" class="photo" />
-            <img src="./images/pics/0024.jpg" class="photo" />
-            <img src="./images/pics/0025.jpg" class="photo" />
-            <img src="./images/pics/0026.jpg" class="photo" />
-            <img src="./images/pics/0027.jpg" class="photo" />
-            <img src="./images/pics/0028.png" class="photo" />
-            <img src="./images/pics/0029.jpg" class="photo" />
-            <img src="./images/pics/0030.jpg" class="photo" />
-            <img src="./images/pics/0031.jpg" class="photo" />
-            <img src="./images/pics/0032.jpg" class="photo" />
-            <img src="./images/pics/0033.png" class="photo" />
-            <img src="./images/pics/0034.jpg" class="photo" />
-            <img src="./images/pics/0035.jpg" class="photo" />
-            <img src="./images/pics/0036.jpg" class="photo" />
-            <img src="./images/pics/0037.jpg" class="photo" />
-            <img src="./images/pics/0038.jpg" class="photo" />
-            <img src="./images/pics/0039.jpg" class="photo" />
-            <img src="./images/pics/0040.jpg" class="photo" />
-            <img src="./images/pics/0099.jpg" class="photo" />
+            <img src="/images/halloween/0010.jpg" class="photo" />
+            <img src="/images/halloween/0009.jpg" class="photo" />
+
+            <img src="/images/halloween/0012.jpg" class="photo" />
+            <img src="/images/halloween/0013.jpg" class="photo" />
+            <img src="/images/halloween/0014.jpg" class="photo" />
+            <img src="/images/halloween/0015.jpg" class="photo" />
+            <img src="/images/halloween/0016.jpg" class="photo" />
+            <img src="/images/halloween/0017.jpg" class="photo" />
+            <img src="/images/halloween/0018.jpg" class="photo" />
+            <img src="/images/halloween/0019.jpg" class="photo" />
+            <img src="/images/halloween/0020.jpg" class="photo" />
           </div>
           <div class="columnthree">
-            <img src="./images/pics/0041.png" class="photo" />
-            <img src="./images/pics/0042.jpg" class="photo" />
-            <img src="./images/pics/0043.jpg" class="photo" />
-            <img src="./images/pics/0044.jpg" class="photo" />
-            <img src="./images/pics/0045.jpg" class="photo" />
-            <img src="./images/pics/0046.jpg" class="photo" />
-            <img src="./images/pics/0047.jpg" class="photo" />
-            <img src="./images/pics/0048.jpg" class="photo" />
-            <img src="./images/pics/0049.jpg" class="photo" />
-            <img src="./images/pics/0050.jpg" class="photo" />
-            <img src="./images/pics/0051.jpg" class="photo" />
-            <img src="./images/pics/0052.jpg" class="photo" />
-            <img src="./images/pics/0053.jpg" class="photo" />
-            <img src="./images/pics/0054.jpg" class="photo" />
-            <img src="./images/pics/0055.jpg" class="photo" />
-            <img src="./images/pics/0056.jpg" class="photo" />
-            <img src="./images/pics/0057.jpg" class="photo" />
-            <img src="./images/pics/0058.jpg" class="photo" />
-            <img src="./images/pics/0059.jpg" class="photo" />
-            <img src="./images/pics/0060.jpg" class="photo" />
+            <img src="/images/halloween/0021.jpg" class="photo" />
+            <img src="/images/halloween/0024.jpg" class="photo" />
+            <img src="/images/halloween/0022.jpg" class="photo" />
+            <img src="/images/halloween/0023.jpg" class="photo" />
+            <img src="/images/halloween/0025.jpg" class="photo" />
+            <img src="/images/halloween/0026.jpg" class="photo" />
+            <img src="/images/halloween/0027.jpg" class="photo" />
+            <img src="/images/halloween/0028.jpg" class="photo" />
+            <a href="./portfolio.html"><img src="/images/halloween/0030.jpg" class="photo" /></a>
           </div>
         </div>
       </div>
