--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="PHoto PHactory by Szabó Réka" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://szaboreka.ro/" />
     <meta property="og:image" content="https://www.szaboreka.ro/images/hatter.JPG" />
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./styles.css" />
