--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://szaboreka.ro/" />
     <meta property="og:image" content="https://www.szaboreka.ro/images/hatter.JPG" />
-    <meta property="og:image:alt" content="./images/hatter.JPG" />
+    <meta property="og:image:alt" content="https://www.szaboreka.ro/images/hatter.JPG" />
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./styles.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
