--- a/roman.html
+++ b/roman.html
@@ -33,7 +33,7 @@
     <main>
       <br id="a" />
       <div class="background">
-        <img src="./images/hatter.JPG" alt="logo" class="logo2" />
+        <img src="./images/christmaslogo.jpg" alt="logo" class="logo2" />
       </div>
 
       <div class="portfolio" id="c">
@@ -41,40 +41,35 @@
         <h2>Galerie</h2>
         <div class="photos">
           <div class="columnone">
-            <img src="/images/halloween/0001.jpg" class="photo" />
-            <img src="/images/halloween/0002.jpg" class="photo" />
-            <img src="/images/halloween/0003.jpg" class="photo" />
-            <img src="/images/halloween/0004.jpg" class="photo" />
-            <img src="/images/halloween/0005.jpg" class="photo" />
-            <img src="/images/halloween/0006.jpg" class="photo" />
-            <img src="/images/halloween/0007.jpg" class="photo" />
-            <img src="/images/halloween/0008.jpg" class="photo" />
-            <img src="/images/halloween/0011.jpg" class="photo" />
-            <img src="/images/halloween/0029.jpg" class="photo" />
+            <img src="/images/christmas/0001.jpg" class="photo" />
+            <img src="/images/christmas/0002.jpg" class="photo" />
+            <img src="/images/christmas/0003.jpg" class="photo" />
+            <img src="/images/christmas/0004.jpg" class="photo" />
+            <img src="/images/christmas/0005.jpg" class="photo" />
+            <img src="/images/christmas/0006.jpg" class="photo" />
+            <img src="/images/christmas/0007.jpg" class="photo" />
+            <img src="/images/christmas/00071.jpg" class="photo" />
           </div>
           <div class="columntwo">
-            <img src="/images/halloween/0010.jpg" class="photo" />
-            <img src="/images/halloween/0009.jpg" class="photo" />
-
-            <img src="/images/halloween/0012.jpg" class="photo" />
-            <img src="/images/halloween/0013.jpg" class="photo" />
-            <img src="/images/halloween/0014.jpg" class="photo" />
-            <img src="/images/halloween/0015.jpg" class="photo" />
-            <img src="/images/halloween/0016.jpg" class="photo" />
-            <img src="/images/halloween/0017.jpg" class="photo" />
-            <img src="/images/halloween/0018.jpg" class="photo" />
-            <img src="/images/halloween/0019.jpg" class="photo" />
-            <img src="/images/halloween/0020.jpg" class="photo" />
+            <img src="/images/christmas/0008.jpg" class="photo" />
+            <img src="/images/christmas/0009.jpg" class="photo" />
+            <img src="/images/christmas/0010.jpg" class="photo" />
+            <img src="/images/christmas/0011.jpg" class="photo" />
+            <img src="/images/christmas/0012.jpg" class="photo" />
+            <img src="/images/christmas/0013.jpg" class="photo" />
+            <img src="/images/christmas/0014.jpg" class="photo" />
+            <img src="/images/christmas/0015.jpg" class="photo" />
+            <img src="/images/christmas/0021.jpg" class="photo" />
           </div>
           <div class="columnthree">
-            <img src="/images/halloween/0021.jpg" class="photo" />
-            <img src="/images/halloween/0024.jpg" class="photo" />
-            <img src="/images/halloween/0022.jpg" class="photo" />
-            <img src="/images/halloween/0023.jpg" class="photo" />
-            <img src="/images/halloween/0025.jpg" class="photo" />
-            <img src="/images/halloween/0026.jpg" class="photo" />
-            <img src="/images/halloween/0027.jpg" class="photo" />
-            <img src="/images/halloween/0028.jpg" class="photo" />
+            <img src="/images/christmas/0016.jpg" class="photo" />
+            <img src="/images/christmas/0017.jpg" class="photo" />
+            <img src="/images/christmas/0018.jpg" class="photo" />
+            <img src="/images/christmas/0019.jpg" class="photo" />
+            <img src="/images/christmas/0020.jpg" class="photo" />
+            <img src="/images/christmas/0022.jpg" class="photo" />
+            <img src="/images/christmas/0023.jpg" class="photo" />
+            <img src="/images/christmas/0024.jpg" class="photo" />
             <a href="./portfolio.html"><img src="/images/halloween/0030.jpg" class="photo" /></a>
           </div>
         </div>
@@ -92,7 +87,7 @@
           <p>P.S. : Nu uitați, fiecare fotografie păstrează o amintire veșnică pentru o viață!</p>
         </article>
         <div>
-          <img class="aboutme" src="./images/aboutme.jpg" alt="Portrait of Szabó Réka" />
+          <img class="aboutme" src="./images/christmasaboutme.jpg" alt="Portrait of Szabó Réka" />
         </div>
       </div>
       <div class="contact">
